--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,13 @@
       "use": "@vercel/node"
     }
   ],
-
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/main.ts",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+    }
+  ],
   "headers": [
     {
       "source": "/api/docs(.*)",
