--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "argon2": "^0.44.0",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
