--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "argon2": "^0.44.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "nodemailer": "^7.0.6",
