--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cloudinary": "^2.8.0",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
