--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.4.0",
+    "@nestjs/websockets": "^11.1.9",
     "@prisma/client": "^6.14.0",
     "@types/nodemailer": "^7.0.1",
     "@types/passport-jwt": "^4.0.1",
@@ -51,6 +53,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "zod": "^4.1.5"
   },
